<resources>
    <string name="app_name">Stagi</string>
    <string name="slogon_app">Stagi.tn</string>
    <string name="copyright1">Copyright (c) </string>
    <string name="copyright2">. All rights reserved.</string>
    <string name="skip">Passer</string>
    <string name="next">Suivant</string>
    <string name="before">précédent</string>
    <string name="start">Se commencer</string>
    <string name="titre1">Offres de stages</string>
    <string name="text_titre1">Vous trouverez les meilleurs et les derniers catalogues des stages sur notre plateforme.</string>
    <string name="titre2">Réunions en ligne</string>
    <string name="text_titre2">Les communications et les réunions avec les enseignants et les encadrants d"'"entreprise se déroulent directement sur notre plateforme.</string>
    <string name="titre3">Publications instantanés</string>
    <string name="text_titre3">Pour éviter les problèmes des e-mails, vous pouvez publier vos projets dans votre propre espace en identifiant vos encadrants et vos enseignants.</string>
    <string name="titre4">Paiements sécurisés</string>
    <string name="text_titre4">Le paiement s"'"effectue de manière très simple en toute sécurité.</string>
    <string name="titre5">Informations personnelles</string>
    <string name="text_titre5">Eviter de mettre des fausses information pour éviter toutes types de probléme durant votre stage.</string>
    <string name="titre_choix_authentification">Trouvez \n vos stages</string>
    <string name="text_choix_authentification">Nous assurons les meilleures catalogues des stages pour vous.</string>
    <string name="signin">Connexion</string>
    <string name="signup">Inscription</string>
    <string name="forget_password">Mot de passe oublié ?</string>
    <string name="desc_login">Une belle expérience à vivre avec nous</string>
    <string name="email_hint">Votre adresse e-mail..</string>
    <string name="welcome_back">Content de te revoir !</string>
    <string name="password_hint">Votre mot de passe..</string>
    <string name="remember_user">Me rappeler</string>
    <string name="text_btn_login">Se connecter</string>
    <string name="login_with">Ou connectez-vous avec</string>
    <string name="format_email_invalide">Le format de votre adresse e-mail n"'"est pas valide..</string>
    <string name="email_vide">Votre adresse e-mail ne doit pas être vide..</string>
    <string name="password_vide">Votre mot de passe ne doit pas être vide..</string>
    <string name="password_length">Votre mot de passe contient moins de 8 caractères..</string>
    <string name="password_miniscule">Votre mot de passe doit contenir au moins une lettre minuscule..</string>
    <string name="password_majuscule">Votre mot de passe doit contenir au moins une lettre majuscule..</string>
    <string name="password_caracteres_speaciaux">Votre mot de passe doit continir au moins un caractère spécial..</string>
    <string name="password_chiffre">Votre mot de passe doit contenir au moins un chiffre..</string>
    <string name="password_non_valide">Votre mot de oasse n"'"est pas valide..</string>


</resources>