<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:src="@drawable/login_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titre_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="20sp"
            android:textColor="@color/first_color"
            android:textAllCaps="true"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/login_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_login"
            android:textColor="@color/black"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="3dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/titre_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="30dp"
            app:boxStrokeColor="@null"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/text_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:background="@drawable/background_inputs_white"
                android:textColor="@color/grise"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                style="@style/Widget.AppCompat.EditText"
                android:drawablePadding="10dp"
                android:hint="@string/email_hint"
                android:textColorHint="@color/grise"
                android:drawableStart="@drawable/email"
                android:drawableTint="@color/grise"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/mark_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/textInputEmail"
            app:layout_constraintBottom_toBottomOf="@id/textInputEmail"
            app:layout_constraintStart_toEndOf="@id/textInputEmail"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/email_erreur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="3dp"
            android:textColor="@color/design_default_color_error"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputEmail"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@null"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grise"
            app:layout_constraintTop_toBottomOf="@id/email_erreur"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:background="@drawable/background_inputs_white"
                android:textColor="@color/grise"
                android:inputType="textPassword"
                android:textSize="15sp"
                style="@style/Widget.AppCompat.EditText"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/grise"
                android:drawableStart="@drawable/lock"
                android:drawableTint="@color/grise"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_erreur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="3dp"
            android:textColor="@color/design_default_color_error"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputPassword"/>

        <ImageView
            android:id="@+id/mark_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/check"
            app:tint="@color/green"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/textInputPassword"
            app:layout_constraintBottom_toBottomOf="@id/textInputPassword"
            app:layout_constraintStart_toEndOf="@id/textInputPassword"
            app:layout_constraintEnd_toEndOf="parent"/>

        <CheckBox
            android:id="@+id/remembrer_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="3dp"
            android:text="@string/remember_user"
            android:textColor="@color/grise"
            android:checked="false"
            android:textSize="12sp"
            android:textStyle="bold"
            android:buttonTint="@color/grise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_erreur"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/text_btn_login"
            android:textAllCaps="false"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="15dp"
            android:padding="18dp"
            android:background="@drawable/background_button_round_bleu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remembrer_user"/>

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_signin">

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:layout_marginEnd="10dp"
                android:background="@color/grise"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textStyle="bold"
                android:text="@string/login_with"
                android:textAlignment="center"
                android:textColor="@color/grise"
                android:textSize="12sp"/>

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:layout_marginStart="10dp"
                android:background="@color/grise"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout1">

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/facebook"/>

            <ImageView
                android:id="@+id/google"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/google"/>

            <ImageView
                android:id="@+id/huawei"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/huawei"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>